update test files to be bundler aware (tests aren't passing because I don't have these accounts - but they run)

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 Gemfile.lock
 test/citi/fixtures/citi-accounts
 test/citi/fixtures/citi-credentials
+test/capital_one/fixtures/capital-one-accounts
+test/capital_one/fixtures/capital-one-credentials
 pkg
