Added rcov to gem development dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ test/citi/fixtures/citi-credentials
 test/capital_one/fixtures/capital-one-accounts
 test/capital_one/fixtures/capital-one-credentials
 pkg
+coverage
